adicionei produtoshtml, fiz um segundo Style para testes e formatei o index

--- a/index.html
+++ b/index.html
@@ -12,12 +12,9 @@
         <a class="brand" href="#">STOREPIN</a>
         <nav class="main-nav">
           <ul>
-            <li><a href="#">PINS</a></li>
-            <li><a href="#">BOX COLECIONADOR</a></li>
-            <li><a href="#">ADESIVOS & IMÃS</a></li>
-            <li><a href="#">FLÂMULAS</a></li>
-            <li><a href="#">ACESSÓRIOS</a></li>
-            <li><a href="#">PROMOÇÕES</a></li>
+            <li><a href="produtos.html">PINS PARA COLECIONADOR</a></li>
+            <li><a href="sobre.html">SOBRE NÓS</a></li>
+            <li><a href="contato.html">CONTATO</a></li>
           </ul>
         </nav>
       </div>
@@ -34,6 +31,7 @@
       <section class="featured container">
         <h2>Destaques</h2>
         <div class="grid">
+
           <article class="card">
             <div class="thumb">A</div>
             <h3>Pin Retro</h3>
@@ -61,6 +59,7 @@
             <p class="price">R$ 29,90</p>
             <button class="btn">Comprar</button>
           </article>
+          
         </div>
       </section>
 
