--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header class="site-header">
       <div class="container header-inner">
-        <a class="brand" href="#">STOREPIN</a>
+        <a class="brand" href="index.html">STOREPIN</a>
         <nav class="main-nav">
           <ul>
             <li><a href="produtos.html">PINS PARA COLECIONADOR</a></li>
@@ -33,15 +33,15 @@
         <div class="grid">
 
           <article class="card">
-            <div class="thumb">A</div>
-            <h3>Pin Retro</h3>
+            <div class="thumb"> <img src="./IMG/pinsDev/HTMLbg.png" alt="Pin de aço de HTML"></div>
+            <h3>DEV-HTML</h3>
             <p class="price">R$ 19,90</p>
             <button class="btn">Comprar</button>
           </article>
 
           <article class="card">
-            <div class="thumb">B</div>
-            <h3>Pin Neon</h3>
+            <div class="thumb"> <img src= "IMG/pinsHobbit/Bilbo_sHouse-removebg-preview.png" alt="Pin de aço bilbo's house">  </div>
+            <h3>Bilbo's house</h3>
             <p class="price">R$ 24,90</p>
             <button class="btn">Comprar</button>
           </article>
