--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
           </article>
 
           <article class="card">
-            <div class="thumb">C</div>
-            <h3>Pin Edição Limitada</h3>
-            <p class="price">R$ 39,90</p>
+            <div class="thumb"> <img src= "./IMG/pinsSilksong/Hornet.png" alt="Hornet">  </div>
+            <h3>Hornet</h3>
+            <p class="price">R$ 24,90</p>
             <button class="btn">Comprar</button>
           </article>
 
