--- a/produtos.html
+++ b/produtos.html
@@ -102,34 +102,34 @@
 
        <section class="featured container">
         <hr>
-        <h2>Coleção: 30 PRAUM</h2>
+        <h2>Coleção: Silksong</h2>
         <div class="grid">
 
           <article class="card">
-            <div class="thumb"> <img src="" alt=""></div>
-            <h3>Pin</h3>
+            <div class="thumb"> <img src="./IMG/pinsSilksong/Groal,-o-grande.png" alt="Groal, o grande"></div>
+            <h3>Groal, o grande</h3>
             <p class="price">R$ 19,90</p>
             <button class="btn">Comprar</button>
           </article>
 
           <article class="card">
-            <div class="thumb"> <img src= "" alt="">  </div>
-            <h3>Pin</h3>
+            <div class="thumb"> <img src= "./IMG/pinsSilksong/Asa-do-Pântano.png" alt="Asa do Pântano">  </div>
+            <h3>Asa do Pântano</h3>
             <p class="price">R$ 24,90</p>
             <button class="btn">Comprar</button>
           </article>
 
           <article class="card">
-            <div class="thumb">C</div>
-            <h3>Pin Edição Limitada</h3>
-            <p class="price">R$ 39,90</p>
+            <div class="thumb"> <img src= "./IMG/pinsSilksong/Dançarinos-Mecânicos.png" alt="Dançarinos Mecânicos">  </div>
+            <h3>Dançarinos Mecânicos</h3>
+            <p class="price">R$ 24,90</p>
             <button class="btn">Comprar</button>
           </article>
 
           <article class="card">
-            <div class="thumb">D</div>
-            <h3>Pin Vintage</h3>
-            <p class="price">R$ 29,90</p>
+            <div class="thumb"> <img src= "./IMG/pinsSilksong/Hornet.png" alt="Hornet">  </div>
+            <h3>Hornet</h3>
+            <p class="price">R$ 24,90</p>
             <button class="btn">Comprar</button>
           </article>
           
