Alterações realizadas no HTML, CSS e IMG

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
           </article>
 
           <article class="card">
-            <div class="thumb">D</div>
-            <h3>Pin Vintage</h3>
-            <p class="price">R$ 29,90</p>
+            <div class="thumb"> <img src="./IMG/pinsRedline/Lamborghini Aventador.png" alt="Pin da Lamborghini Aventador"></div>
+            <h3>Lamborghini Aventador</h3>
+            <p class="price">R$ 24,90</p>
             <button class="btn">Comprar</button>
           </article>
           
