--- a/produtos.html
+++ b/produtos.html
@@ -12,7 +12,7 @@
         <a class="brand" href="index.html">STOREPIN</a>
         <nav class="main-nav">
           <ul>
-            <li><a href="produtos.html">PINS PARA COLECIONADO</a></li>
+            <li><a href="produtos.html">PINS PARA COLECIONADOR</a></li>
             <li><a href="sobre.html">SOBRE NÓS</a></li>
             <li><a href="contato.html">CONTATO</a></li>
           </ul>
@@ -106,21 +106,21 @@
         <div class="grid">
 
           <article class="card">
-            <div class="thumb"> <img src="./IMG/pinsSilksong/Groal,-o-grande.png" alt="Groal, o grande"></div>
+            <div class="thumb"> <img src="./IMG/pinsSilksong/Groal,O-Grande.png" alt="Groal, o grande"></div>
             <h3>Groal, o grande</h3>
-            <p class="price">R$ 19,90</p>
+            <p class="price">R$ 24,90</p>
             <button class="btn">Comprar</button>
           </article>
 
           <article class="card">
-            <div class="thumb"> <img src= "./IMG/pinsSilksong/Asa-do-Pântano.png" alt="Asa do Pântano">  </div>
+            <div class="thumb"> <img src= "./IMG/pinsSilksong/Asa-do-Pantano.png" alt="Asa do Pântano">  </div>
             <h3>Asa do Pântano</h3>
             <p class="price">R$ 24,90</p>
             <button class="btn">Comprar</button>
           </article>
 
           <article class="card">
-            <div class="thumb"> <img src= "./IMG/pinsSilksong/Dançarinos-Mecânicos.png" alt="Dançarinos Mecânicos">  </div>
+            <div class="thumb"> <img src= "./IMG/pinsSilksong/Daçarinos-Mecanicos.png" alt="Dançarinos Mecânicos">  </div>
             <h3>Dançarinos Mecânicos</h3>
             <p class="price">R$ 24,90</p>
             <button class="btn">Comprar</button>
@@ -138,34 +138,34 @@
 
        <section class="featured container">
         <hr>
-        <h2>Coleção: </h2>
+        <h2>Coleção: Redline </h2>
         <div class="grid">
 
           <article class="card">
-            <div class="thumb"> <img src="" alt=""></div>
-            <h3>Pin</h3>
-            <p class="price">R$ 19,90</p>
-            <button class="btn">Comprar</button>
-          </article>
-
-          <article class="card">
-            <div class="thumb"> <img src= "" alt="">  </div>
-            <h3>Pin</h3>
+            <div class="thumb"> <img src="./IMG/pinsRedline/Chevrolet Camaro 6ª.png" alt="Chevrolet Camaro 6ª Geração"></div>
+            <h3>Chevrolet Camaro 6ª Geração</h3>
             <p class="price">R$ 24,90</p>
             <button class="btn">Comprar</button>
           </article>
 
           <article class="card">
-            <div class="thumb">C</div>
-            <h3>Pin Edição Limitada</h3>
-            <p class="price">R$ 39,90</p>
+            <div class="thumb"> <img src= "./IMG/pinsRedline/Ford Mustang 4ª SN95.png" alt="Ford Mustang 4ª SN95">  </div>
+            <h3>Ford Mustang 4ª SN95</h3>
+            <p class="price">R$ 24,90</p>
             <button class="btn">Comprar</button>
           </article>
 
           <article class="card">
-            <div class="thumb">D</div>
-            <h3>Pin Vintage</h3>
-            <p class="price">R$ 29,90</p>
+            <div class="thumb"> <img src="./IMG/pinsRedline/Lamborghini Aventador.png" alt="Pin da Lamborghini Aventador"></div>
+            <h3>Lamborghini Aventador</h3>
+            <p class="price">R$ 24,90</p>
+            <button class="btn">Comprar</button>
+          </article>
+
+          <article class="card">
+            <div class="thumb"> <img src="./IMG/pinsRedline/Lamborghini Sian.png" alt="Lamborghini Sian"></div>
+            <h3>Lamborghini Sian</h3>
+            <p class="price">R$ 24,90</p>
             <button class="btn">Comprar</button>
           </article>
           
