--- a/contato.html
+++ b/contato.html
@@ -7,7 +7,7 @@
   <style>
     
     body {
-      font-family: 'Inter', sans-serif;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
       background-color: #27391C;
       margin: 0;
       padding: 0;
@@ -18,7 +18,7 @@
     }
 
     header {
-      font-family: 'Montserrat', sans-serif;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
       background-color: #18230F;
       color: white;
       text-align: center;
@@ -50,61 +50,21 @@
       align-items: center;
     }
 
-    .contact-info {
-      text-align: left;
-    }
-
-    .contact-item {
-      margin: 25px 0;
-      font-size: 1.1rem;
-    }
-
-    .contact-item span {
-      font-weight: bold;
-      color: #18230F;
-    }
-
-    a {
-      color: #18230F;
-      text-decoration: none;
-      font-weight: bold;
-      transition: color 0.3s ease, text-decoration 0.3s ease;
-    }
-
-    /* a:hover {
-      text-decoration: underline;
-      color: #0F4A2A;
-    } */
-/* 
-    footer {
-      text-align: center;
-      padding: 15px;
-      background-color: #255F38;
-      margin-top: 40px;
-      font-size: 0.9rem;
-      color: white;
-    }
-
-    footer a {
-      color: #00FF6A;
-      text-decoration: none;
-    }
-
-    footer a:hover {
-      text-decoration: underline;
-    } */
   </style>
 </head>
 <body>
-  <header>
-    <nav class="main-nav">
+    <header class="site-header">
+      <div class="container header-inner">
+        <a class="brand" href="index.html">STOREPIN</a>
+        <nav class="main-nav">
           <ul>
             <li><a href="produtos.html">PINS PARA COLECIONADOR</a></li>
             <li><a href="sobre.html">SOBRE NÓS</a></li>
             <li><a href="contato.html">CONTATO</a></li>
           </ul>
-    </nav>
-  </header>
+        </nav>
+      </div>
+    </header>
 
   <main>
     <div class="contact-info">
@@ -130,7 +90,7 @@
     </div>
   </main>
 
-  <footer class="site-footer">
+   <footer class="site-footer">
       <div class="container footer-inner">
         <p>&copy; 2025 StorePin. Todos os direitos reservados.</p>
         <nav class="footer-links">
