--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header class="site-header">
       <div class="container header-inner">
-        <a class="brand" href="index.html">STOREPIN</a>
+        <a class="brand" href="index.html" style="display: inline-flex; align-items: center;"><img src="IMG/logoSVG/Store-pin.svg" alt="Logo da Store-pin" style="height: 10em; margin-right: 8px; filter: brightness(0) invert(1);">STOREPIN</a>
         <nav class="main-nav">
           <ul>
             <li><a href="produtos.html">PINS PARA COLECIONADOR</a></li>
@@ -47,8 +47,8 @@
           </article>
 
           <article class="card">
-            <div class="thumb"> <img src= "./IMG/pinsSilksong/Hornet.png" alt="Hornet">  </div>
-            <h3>Hornet</h3>
+            <div class="thumb"> <img src= "./IMG/pinsSilksong/Hornet.png" alt="Silksong"">  </div>
+            <h3>Hollow Knight: Silksong</h3>
             <p class="price">R$ 24,90</p>
             <button class="btn">Comprar</button>
           </article>
