Alterações na posição da logo.

--- a/produtos.html
+++ b/produtos.html
@@ -9,6 +9,7 @@
   <body>
     <header class="site-header">
       <div class="container header-inner">
+          <img class="logo logo--right logo--large" src="IMG/logoSVG/Store-pin.svg" alt="Logo da Store-pin">
         <a class="brand" href="index.html">STOREPIN</a>
         <nav class="main-nav">
           <ul>
