--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <body>
     <header class="site-header">
       <div class="container header-inner">
-        <a class="brand" href="index.html" style="display: inline-flex; align-items: center;"><img src="IMG/logoSVG/Store-pin.svg" alt="Logo da Store-pin" style="height: 10em; margin-right: 8px; filter: brightness(0) invert(1);">STOREPIN</a>
+  <img class="logo logo--right logo--large" src="IMG/logoSVG/Store-pin.svg" alt="Logo da Store-pin">
+  <a class="brand" href="index.html">STOREPIN</a>
         <nav class="main-nav">
           <ul>
             <li><a href="produtos.html">PINS PARA COLECIONADOR</a></li>
