Adicionei links de caminhos dos produtos

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header class="site-header">
       <div class="container header-inner">
-        <a class="brand" href="index.html" style="display: inline-flex; align-items: center;"><img src="IMG/logoSVG/Store-pin.svg" alt="Logo da Store-pin" style="height: 10em; margin-right: 8px; filter: brightness(0) invert(1);">STOREPIN</a>
+        <a class="brand" href="index.html" >STOREPIN</a>
         <nav class="main-nav">
           <ul>
             <li><a href="produtos.html">PINS PARA COLECIONADOR</a></li>
@@ -36,7 +36,7 @@
             <div class="thumb"> <img src="./IMG/pinsDev/HTMLbg.png" alt="Pin de aço de HTML"></div>
             <h3>DEV-HTML</h3>
             <p class="price">R$ 19,90</p>
-            <button class="btn">Comprar</button>
+            <a href="produtos.html#dev-html"><button class="btn">Comprar</button></a>
           </article>
 
           <article class="card">
