--- a/produtos.html
+++ b/produtos.html
@@ -33,7 +33,7 @@
         <h2>Coleção: Developers</h2>
         <div class="grid">
 
-          <article class="card">
+          <article class="card" id="dev-html">
             <div class="thumb"> <img src="./IMG/pinsDev/HTMLbg.png" alt="Pin de aço de HTML"></div>
             <h3>DEV-HTML</h3>
             <p class="price">R$ 19,90</p>
