Caminhos de index para produtos específico

--- a/index.html
+++ b/index.html
@@ -44,21 +44,21 @@
             <div class="thumb"> <img src= "IMG/pinsHobbit/Bilbo_sHouse-removebg-preview.png" alt="Pin de aço bilbo's house">  </div>
             <h3>Bilbo's house</h3>
             <p class="price">R$ 24,90</p>
-            <button class="btn">Comprar</button>
+            <a href="produtos.html#o-hobbit"><button class="btn">Comprar</button></a>
           </article>
 
           <article class="card">
             <div class="thumb"> <img src= "./IMG/pinsSilksong/Hornet.png" alt="Silksong"">  </div>
             <h3>Hollow Knight: Silksong</h3>
             <p class="price">R$ 24,90</p>
-            <button class="btn">Comprar</button>
+            <a href="produtos.html#Silksong"><button class="btn">Comprar</button></a>
           </article>
 
           <article class="card">
             <div class="thumb"> <img src="./IMG/pinsRedline/Lamborghini Aventador.png" alt="Pin da Lamborghini Aventador"></div>
             <h3>Lamborghini Aventador</h3>
             <p class="price">R$ 24,90</p>
-            <button class="btn">Comprar</button>
+            <a href="produtos.html#redline"><button class="btn">Comprar</button></a>
           </article>
           
         </div>
