--- a/produtos.html
+++ b/produtos.html
@@ -32,9 +32,9 @@
       <section class="featured container">
         <hr>
         <h2>Coleção: Developers</h2>
-        <div class="grid">
+        <div class="grid" id="dev-html">
 
-          <article class="card" id="dev-html">
+          <article class="card">
             <div class="thumb"> <img src="./IMG/pinsDev/HTMLbg.png" alt="Pin de aço de HTML"></div>
             <h3>DEV-HTML</h3>
             <p class="price">R$ 19,90</p>
@@ -68,7 +68,7 @@
  <section class="featured container">
         <hr>
         <h2>Coleção: O Hobbit</h2>
-        <div class="grid">
+        <div class="grid" id="o-hobbit">
 
           <article class="card">
             <div class="thumb"> <img src="./IMG/pinsHobbit/SmaugAndTreasure-removebg-preview.png" alt="Dragao Smaug com tesouro"></div>
@@ -104,7 +104,7 @@
        <section class="featured container">
         <hr>
         <h2>Coleção: Silksong</h2>
-        <div class="grid">
+        <div class="grid" id="Silksong">
 
           <article class="card">
             <div class="thumb"> <img src="./IMG/pinsSilksong/Groal,O-Grande.png" alt="Groal, o grande"></div>
@@ -140,7 +140,7 @@
        <section class="featured container">
         <hr>
         <h2>Coleção: Redline </h2>
-        <div class="grid">
+        <div class="grid" id="redline">
 
           <article class="card">
             <div class="thumb"> <img src="./IMG/pinsRedline/Chevrolet Camaro 6ª.png" alt="Chevrolet Camaro 6ª Geração"></div>
