refatorei o arquivo contato.html

--- a/contato.html
+++ b/contato.html
@@ -1,62 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <title>Contato - StorePin</title>
-  <link rel="stylesheet" href="./assets/css/style.css">
-  <style>
-    
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
-      background-color: #27391C;
-      margin: 0;
-      padding: 0;
-      color: #27391C;
-      display: flex;
-      flex-direction: column;
-      min-height: 100vh;
-    }
-
-    header {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
-      background-color: #18230F;
-      color: white;
-      text-align: center;
-      padding: 30px 20px;
-    }
-
-    h1 {
-      margin: 0;
-      font-size: 2.5rem;
-    }
-
-    p {
-      margin: 10px 0 0;
-      font-size: 1.2rem;
-    }
-
-    main {
-      max-width: 4000px;
-      margin: 80px;
-      margin-left: 300px;
-      margin-right: 300px;
-      padding: 20px;
-      background: #fff;
-      border-radius: 12px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      flex: 1;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-  </style>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>StorePin — Loja de Pins</title>
+    <link rel="stylesheet" href="assets/css/style.css" />
+  </head>
+  <body>
     <header class="site-header">
       <div class="container header-inner">
-          <img class="logo logo--right logo--large" src="IMG/logoSVG/Store-pin.svg" alt="Logo da Store-pin">
-        <a class="brand" href="index.html">STOREPIN</a>
+  <img class="logo logo--right logo--large" src="IMG/logoSVG/Store-pin.svg" alt="Logo da Store-pin">
+  <a class="brand" href="index.html">STOREPIN</a>
         <nav class="main-nav">
           <ul>
             <li><a href="produtos.html">PINS PARA COLECIONADOR</a></li>
@@ -67,31 +21,23 @@
       </div>
     </header>
 
-  <main>
-    <div class="contact-info">
-      <div class="contact-item">
-        📧 <span>Email:</span> <a href="mailto:contato@StorePin.com" aria-label="Enviar email para contato@StorePin.com">contato@StorePin.com</a>
-      </div>
+    <main class="container page-contato">
+      <h1>Contato</h1>
+      <p class="intro">Se tiver dúvidas, sugestões ou quiser falar sobre nossos pins, entre em contato pelos canais abaixo. Responderemos o mais rápido possível.</p>
 
-      <div class="contact-item">
-        📱 <span>WhatsApp:</span> <a href="https://wa.me/5581999999999" target="_blank" aria-label="Abrir WhatsApp para (81) 99999-9999">(81) 99999-9999</a>
-      </div>
+      <section class="fale-conosco">
+        <h2>Fale conosco</h2>
+        <div class="content">
+          <p>✉️ <strong>Email:</strong> <a href="mailto:contato@StorePin.com">contato@StorePin.com</a></p>
+          <p>📱 <strong>WhatsApp:</strong> <a href="https://wa.me/5581999999999" target="_blank">(81) 99999-9999</a></p>
+          <p>☎️ <strong>Telefone:</strong> (81) 3456-7890</p>
+          <p>📍 <strong>Endereço:</strong> Rua Matheus Brasileiro Aguiar - Brasil</p>
+          <p>📷 <strong>Instagram:</strong> <a href="https://instagram.com/StorePin" target="_blank">@StorePin</a></p>
+        </div>
+      </section>
+    </main>
 
-      <div class="contact-item">
-        ☎️ <span>Telefone:</span> (81) 3456-7890
-      </div>
-
-      <div class="contact-item">
-        📍 <span>Endereço:</span> Rua Matheus Brasileiro Aguiar - Brasil
-      </div>
-
-      <div class="contact-item">
-        📷 <span>Instagram:</span> <a href="https://instagram.com/StorePin" target="_blank" aria-label="Visitar Instagram da StorePin">@StorePin</a>
-      </div>
-    </div>
-  </main>
-
-   <footer class="site-footer">
+    <footer class="site-footer">
       <div class="container footer-inner">
         <p>&copy; 2025 StorePin. Todos os direitos reservados.</p>
         <nav class="footer-links">
@@ -100,5 +46,5 @@
         </nav>
       </div>
     </footer>
-</body>
+  </body>
 </html>
